using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Project_Anxiety.Game.Utility
{
    public sealed class AnimationStrings : MonoBehaviour
    { 
        public static string isMoving = "isMoving";
        public static string isRunning = "isRunning";
        public static string isGrounded = "isGrounded";
        public static string yVelocity = "yVelocity";
        public static string jumpTrigger = "jump";
        public static string isOnWall = "isOnWall";
        public static string isOnCeiling = "isOnCeiling";
        public static string attackTrigger = "attack";
        public static string canMove = "canMove";
        public static string hasTarget = "hasTarget";
        public static string isDead = "isDead";
        public static string attackCooldown = "attackCooldown";
        public static string hitTrigger = "hit";
        public static string isCrouching = "isCrouching";
    }

}
